# 401-python-django-customer-user

./: README.md  pyproject.toml
site_project/: db.sqlite3
site_project/account/: admin.py  models.py  tests.py  views.py
site_project/account/migrations/: 0001_initial.py  0002_auto_20200618_2106.py
site_project/site_project/: asgi.py  settings.py  urls.py  wsgi.py
site_project/static/js/: app.js
site_project/templates/: base.html  home.html  signup.html
site_project/templates/registration/: login.html
