[tool.poetry]
name = "django-customer-user"
version = "0.1.0"
description = ""
authors = ["joseph-zabaleta <joseph.l.zabaleta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.7"
django-allauth = "^0.42.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
